--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -26,6 +26,13 @@
 
     <p>Descarrega aquesta clau privada: <a href="https://github.com/gerardfp/gerardfp.github.io/releases/download/img/id_rsa">id_rsa</a></p>
 
+    <p>Estableix permisos <w>600</w> al fitxer de la clau:</p>
+
+    <host>@host</host>
+    <shell>
+        chmod 600 <replace>/path/to/id_rsa</replace>
+    </shell>
+
     <p>Utilitza aquesta clau per a accedir a la màquina virtual per ssh:</p>
 
     <host>@host</host>
