--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -416,6 +416,11 @@ INSERT INTO movie_genre VALUES
                     <p>Per últim fes el desplegament inicial de la app</p>
                     <img src="img/img4.png">
                 </li>
+                <li>
+                    <p>Afegeix el servidor Postgres a Heroku:</p>
+                    <p>Ves a la pestanya <img src="img/img5.png"> i afegeix l'add-on "Heroku postgres"</p>
+                    <img src="img/img6.png">
+                </li>
             </ul>
         </li>
     </ul>
