--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -390,7 +390,7 @@ INSERT INTO movie_genre VALUES
             </observe>
         </li>
         <li>
-            <p>Publica el projecte a github.</p>
+            <p>Publica el projecte a GitHub.</p>
         </li>
 
         <li>
@@ -402,11 +402,11 @@ INSERT INTO movie_genre VALUES
 
             <ul>
                 <li>
-                    <p>Escull "GITHUB" com a Deployment method</p>
+                    <p>Escull "GitHub" com a Deployment method</p>
                     <img src="img/img2.png">
                 </li>
                 <li>
-                    <p>Connecta el repositori github</p>
+                    <p>Connecta el repositori GitHub</p>
                 </li>
                 <li>
                     <p>Activa el desplegament automàtic (cada cop que facis un push, es desplegarà de nou la app)</p>
