--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -371,11 +371,11 @@ INSERT INTO movie_genre VALUES
                 flyway.password=mysecretpassword
                 spring.flyway.baseline_on_migrate=true
 
-                server.port=${PORT:5000}
+                server.port=${PORT:}
             </sc>
 
             <observe>
-                <p>Les variables <w>${JDBC_DATABASE_URL:}</w> i <w>${PORT:5000}</w> són variables d'entorn proporcionades per Heroku.</p>
+                <p>Les variables <w>${JDBC_DATABASE_URL:}</w> i <w>${PORT:}</w> són variables d'entorn proporcionades per Heroku.</p>
             </observe>
         </li>
         <li>
