--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -390,7 +390,7 @@ INSERT INTO movie_genre VALUES
             <observe>
                 <p>Amb l'opció <w>-Dspring.profiles.active=production</w> li diem que agafi l'arxiu de configuració <w>application-<b>production</b>.properties</w></p>
 
-                <p>El nom del projecte el trobaràs a l'arxiu <w>setting.gradle</w>, i la versió a l'arxiu <w>build.gradle</w>.</p>
+                <p><w>myapi-0.0.1-SNAPSHOT</w>: El nom del projecte el trobaràs a l'arxiu <w>settings.gradle</w>, i la versió a l'arxiu <w>build.gradle</w>.</p>
             </observe>
         </li>
         <li>
