--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -797,7 +797,7 @@ INSERT INTO movie_genre VALUES
         }
     </sc>
 
-    <p>Per últim caldrà permetre l'accés a usuaris no autenticats a l'endpoint de registre:</p>
+    <p>Per últim caldrà permetre l'accés a usuaris no autenticats a l'endpoint de registre (<w>/users/register</w>):</p>
 
     <scfile>
         src/main/java/com/example/demo/SecurityConfig.java
