--- a/daw-m8/index.html
+++ b/daw-m8/index.html
@@ -171,5 +171,18 @@ a {
                 <div class="button">Start</div>    
             </div>
         </div>
+    </a><a href="/daw-m8-virtmanager">
+        <div class="card web">
+            <div class="card-title">
+                <span>virt-manager setup</span>
+            </div>
+            <div class="card-description">
+
+            </div>
+            <div class="card-footer">
+                <div class="icon"></div>
+                <div class="button">Start</div>    
+            </div>
+        </div>
     </a>
 </div>
