--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     --dades-image: url('/dades.png');
     --desplegament-color: #dcd93d;
     --desplegament-image: url('/desplegament.png');
+    --internet-color: #dc3d65;
+    --internet-image: url('/internet.jpg');
     --mobils-color: #3ddc84;
     --mobils-image: url('/mobils.jpg');
     --web-color: #4285f4;
@@ -71,6 +73,11 @@ a {
     border-color: var(--desplegament-color);
 }
 
+.card.internet{
+    background-color: var(--internet-color);
+    border-color: var(--internet-color);
+}
+
 .card.mobils{
     background-color: var(--mobils-color);
     border-color: var(--mobils-color);
@@ -123,6 +130,12 @@ a {
         <div class="card desplegament">
             <h1>DAW-M8-Desplegament d'aplicacions web</h1>
             <img src="desplegament.png">
+        </div>
+    </a>
+    <a href="/asix-m8">
+        <div class="card internet">
+            <h1>ASIX-M8-Serveis de xarxa i internet</h1>
+            <img src="internet.jpg">
         </div>
     </a>
     <a href="/dam-m8">
