--- a/asix-m8/index.html
+++ b/asix-m8/index.html
@@ -122,7 +122,7 @@ a {
 <a href="/asix-m8-uf1">
         <div class="card web">
             <div class="card-title">
-                <span>UF1 - Servidors web i transferència de fitxers</span>
+                <span>UF1 - Servei de noms i configuració automàtica</span>
             </div>
             <div class="card-description">
 
@@ -135,7 +135,7 @@ a {
     </a><a href="/asix-m8-uf2">
         <div class="card web">
             <div class="card-title">
-                <span>UF2 - Servidors d’aplicacions web</span>
+                <span>UF2 - Serveis web i de transferència de fitxers</span>
             </div>
             <div class="card-description">
 
@@ -148,7 +148,7 @@ a {
     </a><a href="/asix-m8-uf3">
         <div class="card web">
             <div class="card-title">
-                <span>UF3 - Desplegament d’aplicacions web</span>
+                <span>UF3 - Correu electrònic i missatgeria</span>
             </div>
             <div class="card-description">
 
@@ -161,7 +161,7 @@ a {
     </a><a href="/asix-m8-uf4">
         <div class="card web">
             <div class="card-title">
-                <span>UF4 - Control de versions i documentació</span>
+                <span>UF4 - Serveis d’àudio i vídeo</span>
             </div>
             <div class="card-description">
 
