--- a/asix-m8-uf2/index.html
+++ b/asix-m8-uf2/index.html
@@ -16,8 +16,10 @@
     <h2>NGINX server</h2>
 
     <ul>
-        <li>
-            <a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#server">server</a>
-        </li>
+        <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#server">server</a></li>
+        <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#root">root</a></li>
+        <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#server_name">server_name</a></li>
+        <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#listen">listen</a></li>
+        <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#location">location</a></li>
     </ul>
 </section>
