--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -8,7 +8,7 @@
 <header>
   <h1>DAM - M6 Accés a dades - UF2 Persistència en BDR-OR-OO</h1>
   <abstract>
-    Spring Boot web services using JPA
+    <p>Spring Boot web services using JPA</p>
 
     <a href="https://github.com/gerardfp/demo">https://github.com/gerardfp/demo</a>
   </abstract>
@@ -18,7 +18,7 @@
     <h2>Database server</h2>
 
     <h3>Màquina virtual</h3>
-    <p>Descarrega aquesta imagtge de disc dur virtual: <a href="https://github.com/gerardfp/gerardfp.github.io/releases/download/img/debian-11-nocloud-amd64.qcow2">debian-11-nocloud-amd64.qcow2</a></p>
+    <p>Descarrega aquesta imatge de disc dur virtual: <a href="https://github.com/gerardfp/gerardfp.github.io/releases/download/img/debian-11-nocloud-amd64.qcow2">debian-11-nocloud-amd64.qcow2</a></p>
 
     <p>Crea una nova màquina virtual amb la imatge descarregada.</p>
 
