--- a/dam-m6-uf2/index.html
+++ b/dam-m6-uf2/index.html
@@ -6,7 +6,7 @@
 
 <nav></nav>
 <header>
-  <h1>DAM - M6 Accés a dades - UF2 Persistència en BDR-OR-OO</h1>
+  <h1>DAM - M6 Accés a dades <br> UF2 Persistència en BDR-OR-OO</h1>
   <abstract>
     <p>Spring Boot web services using JPA</p>
 
