--- a/daw-m8-uf2/index.html
+++ b/daw-m8-uf2/index.html
@@ -29,4 +29,7 @@
         </shell>     
        </li>
    </ul>
+
+   <h2>docker-compose reference</h2>
+   <a href="https://docs.docker.com/compose/compose-file/compose-file-v3/">compose-file-v3</a>
 </section>
