--- a/asix-m8-uf2/index.html
+++ b/asix-m8-uf2/index.html
@@ -23,12 +23,15 @@
         <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#listen">listen</a></li>
         <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#location">location</a></li>
 
-        <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#location">ssl</a>
+        <li><a href="http://nginx.org/en/docs/http/configuring_https_servers.html">ssl</a>
           <host>root@server</host>
           <shell>
-            openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj '/CN=mysite.com' -keyout /etc/ssl/private/site.key -out /etc/ssl/certs/site.pem
-          </shell>
-          
+            openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/site.key -out /etc/ssl/certs/site.pem
+          </shell>          
         </li>
+        <li><a href="http://nginx.org/en/docs/http/ngx_http_rewrite_module.html#rewrite">rewrite</a></li>
+        <li><a href="http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_pass">proxy_pass</a></li>
+        <li><a herf="http://nginx.org/en/docs/http/ngx_http_fastcgi_module.html#fastcgi_pass">fastcgi_pass</a></li>
+        <li><a href="http://nginx.org/en/docs/http/ngx_http_upstream_module.html#upstream">upstream</a></li>
     </ul>
 </section>
