--- a/asix-m8-uf2/index.html
+++ b/asix-m8-uf2/index.html
@@ -30,7 +30,7 @@
         </li>
         <li><a href="http://nginx.org/en/docs/http/ngx_http_rewrite_module.html#rewrite">rewrite</a></li>
         <li><a href="http://nginx.org/en/docs/http/ngx_http_proxy_module.html#proxy_pass">proxy_pass</a></li>
-        <li><a herf="http://nginx.org/en/docs/http/ngx_http_fastcgi_module.html#fastcgi_pass">fastcgi_pass</a></li>
+        <li><a href="http://nginx.org/en/docs/http/ngx_http_fastcgi_module.html#fastcgi_pass">fastcgi_pass</a></li>
         <li><a href="http://nginx.org/en/docs/http/ngx_http_upstream_module.html#upstream">upstream</a></li>
     </ul>
 </section>
