--- a/asix-m8-uf2/index.html
+++ b/asix-m8-uf2/index.html
@@ -34,3 +34,26 @@
         <li><a href="http://nginx.org/en/docs/http/ngx_http_upstream_module.html#upstream">upstream</a></li>
     </ul>
 </section>
+
+<section>
+  <h2>Docker</h2>
+
+  <p>Instal·lació</p>
+  <ul>
+    <li>
+        <p>docker</p>
+        <host>root@server</host>
+        <shell>
+            curl -fsSL https://get.docker.com -o get-docker.sh && sh get-docker.sh
+        </shell>
+    </li>
+       <li>
+        <p>docker-compose</p>
+        <host>root@server</host>
+        <shell>
+            curl -L "https://github.com/docker/compose/releases/download/$(curl -s https://api.github.com/repos/docker/compose/releases/latest | grep -oP '"tag_name": "\K(.*)(?=")')/docker-compose-$(uname -s)-$(uname -m)" -o /usr/local/bin/docker-compose && chmod +x /usr/local/bin/docker-compose
+        </shell>     
+       </li>
+   </ul>
+
+</section>
