--- a/asix-m8-uf2/index.html
+++ b/asix-m8-uf2/index.html
@@ -26,7 +26,7 @@
         <li><a href="https://nginx.org/en/docs/http/ngx_http_core_module.html#location">ssl</a>
           <host>root@server</host>
           <shell>
-            openssl req -x509 -nodes -days 365 -newkey rsa:2048 -subj '/CN=mysite.com' -keyout /etc/ssl/private/site.key -out /etc/ssl/certs/site.pem
+            openssl req -x509 -nodes -days 365 -newkey rsa:2048 -keyout /etc/ssl/private/site.key -out /etc/ssl/certs/site.pem
           </shell>
         </li>
         <li><a href="http://nginx.org/en/docs/http/ngx_http_rewrite_module.html#rewrite">rewrite</a></li>
