--- a/javatutorial/index.html
+++ b/javatutorial/index.html
@@ -1,26 +1,79 @@
 <!DOCTYPE html>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<script type="module" src="/sofi/js/script.js"></script>
-<link rel="stylesheet" href="/sofi/css/estil.css">
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script type="module" src="/sofi/js/script.js"></script>
+    <link rel="stylesheet" href="/sofi/css/estil.css">    
+</head>
+
+<style>
+    body {
+        margin: 0;
+        background-color: #eceff1;
+    }
+    header {
+        padding: 24px;
+        background-color: #ed0000;
+        color: white;
+        max-width: 100%;
+    }
+    
+    h1 {
+        margin: 0px 0;
+        color: white;
+    }
+
+    div {
+        max-width: 900px;
+        margin: auto;
+        padding: 16px;
+    }
+
+    ul {
+        padding: 0;
+    }
+
+    li {
+        list-style-type: none;
+        background-color: white;
+        margin: 8px 0;
+        padding: 12px 24px;
+    }
+    li a::before {
+        content: '\f19d';
+        font-family: 'FASolid';
+        color: #ed0000;
+        margin-right: 1em;;
+
+    }
+
+    li a {
+        display: block;
+        text-decoration: none;
+        color: #555;
+    }
+</style>
 
 <header>
     <h1>Tutorial Java</h1>
-
-    <abstract>
-        <p>Temes:</p>
-        <ul>
-            <li><a href="1">Imprimir literals</a></li>
-            <li><a href="2">Escanejar variables</a></li>
-            <li><a href="3">Operadors</a></li>
-            <li><a href="4">Conversió de tipus</a></li>
-            <li><a href="5">Sentències condicionals</a></li>
-            <li><a href="6">Sentències de repetició</a></li>
-            <li><a href="7">Sentències de ramificació</a></li>
-            <li><a href="8">Arrays</a></li>
-            <li><a href="9">Classes i objectes</a></li>
-            <li><a href="10">Mètodes</a></li>
-        </ul>
-        <p><a href="https://hackerrank.com/dam-m3">Exercicis</a></p>
-    </abstract>
+    
 </header>
+<div>
+
+    <ul>
+        <li><a href="1">Imprimir literals</a></li>
+        <li><a href="2">Escanejar variables</a></li>
+        <li><a href="3">Operadors</a></li>
+        <li><a href="4">Conversió de tipus</a></li>
+        <li><a href="5">Sentències condicionals</a></li>
+        <li><a href="6">Sentències de repetició</a></li>
+        <li><a href="7">Sentències de ramificació</a></li>
+        <li><a href="8">Arrays</a></li>
+        <li><a href="9">Classes i objectes</a></li>
+        <li><a href="10">Mètodes</a></li>
+    </ul>
+    <challenge>
+        <p>Per fer els exercicis és necessari inscriure's prèviament en aquest <em>contest</em> de Hackerrank:</p>
+        <p><a href="https://hackerrank.com/dam-m3">Exercicis</a></p>    
+    </challenge>
+</div>
