--- a/_materials/javatutorial/4/index.html
+++ b/_materials/javatutorial/4/index.html
@@ -199,6 +199,8 @@
 
     <challenge>
         <p>
+            <a href="https://www.hackerrank.com/contests/dam-m3/challenges/palindromo-de-5-letras">Palíndromo de 5 letras</a>
+            <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/c1-l2-8-notacio-algebraica-als-escacs">Notació algebraica als escacs</a>
             <br>
             <a href="https://www.hackerrank.com/contests/dam-m3/challenges/c1-l2-2-prova-mecanografica">Prova mecanogràfica</a>
